--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
-NODE_IP=192.168.77.140
+NODE_IP=192.168.179.128
 VM_LIST=100
-VM_IPS=100:192.168.77.146
+VM_IPS=100:192.168.179.131
 
 BACKUP_TYPE=vm
 
-TELEGRAM_BOT_TOKEN=8084734264:AAG5f-V5l4eSSlhYoUYv1Ad67q-rF48EIO0
-TELEGRAM_CHAT_ID=-5035335319
+TELEGRAM_BOT_TOKEN=7556324809:AAF2TWWD8ep1xUYz-daLTq9kTAfbrjp-b_I
 
-PUSHGATEWAY_URL=http://192.168.77.140:9091
-RSYNC_TARGETS=192.168.77.141,192.168.77.142
+TELEGRAM_CHAT_ID=7420481293
+
+PUSHGATEWAY_URL=http://192.168.179.128:9091
+RSYNC_TARGETS=192.168.179.130
 
 DB_USER=root
-DB_PASS=@Admin1234
+DB_PASS=TlaGQ2ogEI
 DB_NAME=virtualizor
 MYSQLDUMP_BIN=/usr/local/emps/bin/mysqldump
 MYSQL_SOCKET=/usr/local/emps/var/mysql/mysql.sock
 
 DB_BACKUP_DIR=/var/backups/db
 VM_BACKUP_DIR=/var/backups/vm
-8084734264:AAG5f-V5l4eSSlhYoUYv1Ad67q-rF48EIO0
